--- a/VCFv4.4.tex
+++ b/VCFv4.4.tex
@@ -588,15 +588,50 @@ The reserved values must be used for the types listed below:
 ##INFO=<ID=SVLEN,Number=.,Type=Integer,Description="Difference in length between REF and ALT alleles">
 \end{verbatim}
 \normalsize
-One value for each ALT allele. Longer ALT alleles (e.g.\ insertions) have positive values, shorter ALT alleles (e.g.\ deletions) have negative values.
+
+One value for each ALT allele.
+Longer ALT alleles (e.g.\ insertions) have positive values, shorter ALT alleles (e.g.\ deletions) have negative values.
+Inversion events should have $SVLEN=0$ since the total length of the allele matches the reference.
+The missing value should be used for inter-chromosomal $BND$ records.
+
 
 \footnotesize
 \begin{verbatim}
-##INFO=<ID=CIPOS,Number=2,Type=Integer,Description="Confidence interval around POS for imprecise variants">
+##INFO=<ID=CIPOS,Number=.,Type=Integer,Description="Confidence interval around POS for imprecise variants">
+\end{verbatim}
+\normalsize
+
+If present, the number of entries must be twice the number of alt allele (Number=2A).
+$CIPOS$ consists of successive pairs of records indicate the start and end offsets relative to $POS$ of the confidence interval for each alt allele.
+For example, $CIPOS=-5,5,0,0$ indicates a 5bp confidence interval in each direction for the first alt allele, and an exact position for the second alt allele.
+
+When breakpoint sequence homology exists, $CIPOS$ should be used in conjunction with $HOMSEQ$ to specify the interval of homology.
+
+If both $IMPRECISE$ and $CIPOS$ are omitted, $CIPOS$ is defined as 0,0 for all alt alleles.
+
+\footnotesize
+\begin{verbatim}
 ##INFO=<ID=CIEND,Number=2,Type=Integer,Description="Confidence interval around END for imprecise variants">
-##INFO=<ID=HOMLEN,Number=.,Type=Integer,Description="Length of base pair identical micro-homology at event breakpoints">
-##INFO=<ID=HOMSEQ,Number=.,Type=String,Description="Sequence of base pair identical micro-homology at event breakpoints">
-##INFO=<ID=BKPTID,Number=.,Type=String,Description="ID of the assembled alternate allele in the assembly file">
+\end{verbatim}
+\normalsize
+
+If present, the number of entries must be twice the number of alt allele (Number=2A).
+$CIEND$ consists of successive pairs of records indicate the start and end offsets relative to $END$ of the confidence interval for each alt allele.
+For example, $CIEND=-5,5,.,.$ indicates a 5bp confidence interval in each direction around the end position for the first alt allele, and no $CIEND$ defined for the second alt allele.
+
+\footnotesize
+\begin{verbatim}
+##INFO=<ID=HOMLEN,Number=A,Type=Integer,Description="Length of base pair identical micro-homology at event breakpoints">
+\end{verbatim}
+\normalsize
+\footnotesize
+\begin{verbatim}
+##INFO=<ID=HOMSEQ,Number=A,Type=String,Description="Sequence of base pair identical micro-homology at event breakpoints">
+\end{verbatim}
+\normalsize
+\footnotesize
+\begin{verbatim}
+##INFO=<ID=BKPTID,Number=A,Type=String,Description="ID of the assembled alternate allele in the assembly file">
 \end{verbatim}
 \normalsize
 For precise variants, the consensus sequence the alternate allele assembly is derivable from the REF and ALT fields.
@@ -604,23 +639,58 @@ However, the alternate allele assembly file may contain additional information a
 
 \footnotesize
 \begin{verbatim}
-##INFO=<ID=MEINFO,Number=4,Type=String,Description="Mobile element info of the form NAME,START,END,POLARITY">
-##INFO=<ID=METRANS,Number=4,Type=String,Description="Mobile element transduction info of the form CHR,START,END,POLARITY">
-##INFO=<ID=DGVID,Number=1,Type=String,Description="ID of this element in Database of Genomic Variation">
-##INFO=<ID=DBVARID,Number=1,Type=String,Description="ID of this element in DBVAR">
-##INFO=<ID=DBRIPID,Number=1,Type=String,Description="ID of this element in DBRIP">
-##INFO=<ID=MATEID,Number=.,Type=String,Description="ID of mate breakends">
-##INFO=<ID=PARID,Number=1,Type=String,Description="ID of partner breakend">
-##INFO=<ID=EVENT,Number=1,Type=String,Description="ID of event associated to breakend">
-##INFO=<ID=CILEN,Number=2,Type=Integer,Description="Confidence interval around the inserted material between breakends">
-##INFO=<ID=DP,Number=1,Type=Integer,Description="Read Depth of segment containing breakend">
-##INFO=<ID=DPADJ,Number=.,Type=Integer,Description="Read Depth of adjacency">
-##INFO=<ID=CN,Number=1,Type=Integer,Description="Copy number of segment containing breakend">
-##INFO=<ID=CNADJ,Number=.,Type=Integer,Description="Copy number of adjacency">
-##INFO=<ID=CICN,Number=2,Type=Integer,Description="Confidence interval around copy number for the segment">
+##INFO=<ID=MEINFO,Number=.,Type=String,Description="Mobile element info of the form NAME,START,END,POLARITY">
+\end{verbatim}
+\normalsize
+
+If present, the number of entries must be four (4) the number of alt allele (Number=4A).
+$MEINFO$ consists of successive quadruplets of records for each alt allele.
+
+\footnotesize
+\begin{verbatim}
+##INFO=<ID=METRANS,Number=.,Type=String,Description="Mobile element transduction info of the form CHR,START,END,POLARITY">
+\end{verbatim}
+\normalsize
+
+If present, the number of entries must be four (4) the number of alt allele (Number=4A).
+$MEINFO$ consists of successive quadruplets of records for each alt allele.
+
+\footnotesize
+\begin{verbatim}
+##INFO=<ID=DGVID,Number=A,Type=String,Description="ID of this element in Database of Genomic Variation">
+##INFO=<ID=DBVARID,Number=A,Type=String,Description="ID of this element in DBVAR">
+##INFO=<ID=DBRIPID,Number=A,Type=String,Description="ID of this element in DBRIP">
+##INFO=<ID=MATEID,Number=A,Type=String,Description="ID of mate breakends">
+##INFO=<ID=PARID,Number=A,Type=String,Description="ID of partner breakend">
+##INFO=<ID=EVENT,Number=A,Type=String,Description="ID of event associated to breakend">
+##INFO=<ID=CILEN,Number=.,Type=Integer,Description="Confidence interval around the inserted material between breakends">
+\end{verbatim}
+\normalsize
+
+If present, the number of entries must be twice the number of alt allele (Number=2A).
+$CIEND$ consists of successive pairs of records indicate the lower and upper bounds of the $SVLEN$ confidence interval.
+
+\footnotesize
+\begin{verbatim}
+##INFO=<ID=DP,Number=A,Type=Integer,Description="Read Depth of segment containing breakend">
+##INFO=<ID=DPADJ,Number=A,Type=Integer,Description="Read Depth of adjacency">
+##INFO=<ID=CN,Number=A,Type=Integer,Description="Copy number of segment containing breakend">
+##INFO=<ID=CNADJ,Number=A,Type=Integer,Description="Copy number of adjacency">
+##INFO=<ID=CICN,Number=.,Type=Integer,Description="Confidence interval around copy number for the segment">
+\end{verbatim}
+\normalsize
+
+If present, the number of entries must be twice the number of alt allele (Number=2A).
+$CICN$ consists of successive pairs of records indicate the lower and upper copy number bounds.
+
+\footnotesize
+\begin{verbatim}
 ##INFO=<ID=CICNADJ,Number=.,Type=Integer,Description="Confidence interval around copy number for the adjacency">
 \end{verbatim}
 \normalsize
+
+If present, the number of entries must be twice the number of alt allele (Number=2A).
+$CICNADJ$ consists of successive pairs of records indicate the lower and upper copy number bounds.
 
 \section{FORMAT keys used for structural variants}
 \label{sv-format-keys}
