--- a/VCFv4.4.tex
+++ b/VCFv4.4.tex
@@ -556,10 +556,22 @@ Several tag names follow conventions indicating how their values are represented
 \begin{samepage}
 The following INFO keys are reserved for encoding structural variants.
 In general, when these keys are used by imprecise variants, the values should be best estimates.
-When a key reflects a property of a single alt allele (e.g.\ SVLEN), then when there are multiple alt alleles there will be multiple values for the key corresponding to each allele (e.g.\ SVLEN=-100,-110 for a deletion with two distinct alt alleles).
+When present, per allele keys must be specified for all alt alleles (including non-structural alleles).
+The missing value should be used as a placeholder for the alt alleles for which the key does not have a meaningful value.
+The empty string is used to encode missing values in lists of strings.
+
 \footnotesize
 \begin{verbatim}
 ##INFO=<ID=IMPRECISE,Number=0,Type=Flag,Description="Imprecise structural variation">
+\end{verbatim}
+\normalsize
+
+Indicates that this record contains an imprecise structural variant $ALT$ allele. ALT alleles missing $CIPOS$ are to be interpreted as imprecise events with an unspecified confidence interval.
+
+If a precise ALT allele is present in a record with the $IMPRECISE$ flag, $CIPOS$ must be explicitly set for that allele, even if it is `0,0`.
+
+\footnotesize
+\begin{verbatim}
 ##INFO=<ID=NOVEL,Number=0,Type=Flag,Description="Indicates a novel structural variation">
 ##INFO=<ID=END,Number=1,Type=Integer,Description="End position of the variant described in this record">
 \end{verbatim}
@@ -592,8 +604,7 @@ The reserved values must be used for the types listed below:
 One value for each ALT allele.
 Longer ALT alleles (e.g.\ insertions) have positive values, shorter ALT alleles (e.g.\ deletions) have negative values.
 Inversion events should have $SVLEN=0$ since the total length of the allele matches the reference.
-The missing value should be used for inter-chromosomal $BND$ records.
-
+The missing value should be used for inter-chromosomal $BND$ records, and may be used for intra-chromosomal $BND$ record.
 
 \footnotesize
 \begin{verbatim}
@@ -601,13 +612,15 @@ The missing value should be used for inter-chromosomal $BND$ records.
 \end{verbatim}
 \normalsize
 
-If present, the number of entries must be twice the number of alt allele (Number=2A).
-$CIPOS$ consists of successive pairs of records indicate the start and end offsets relative to $POS$ of the confidence interval for each alt allele.
+If present, the number of entries must be twice the number of alt alleles.
+$CIPOS$ consists of successive pairs of records indicating the start and end offsets relative to $POS$ of the confidence interval for each alt allele.
 For example, $CIPOS=-5,5,0,0$ indicates a 5bp confidence interval in each direction for the first alt allele, and an exact position for the second alt allele.
 
 When breakpoint sequence homology exists, $CIPOS$ should be used in conjunction with $HOMSEQ$ to specify the interval of homology.
 
-If both $IMPRECISE$ and $CIPOS$ are omitted, $CIPOS$ is defined as 0,0 for all alt alleles.
+If both $IMPRECISE$ and $CIPOS$ are omitted, $CIPOS$ is defined as 0,0 for all alleles.
+
+Each $CIPOS$ interval must span 0. That is, the lower bound cannot be greater than 0, and the upper bound cannot be less than 0.
 
 \footnotesize
 \begin{verbatim}
@@ -615,9 +628,9 @@ If both $IMPRECISE$ and $CIPOS$ are omitted, $CIPOS$ is defined as 0,0 for all a
 \end{verbatim}
 \normalsize
 
-If present, the number of entries must be twice the number of alt allele (Number=2A).
-$CIEND$ consists of successive pairs of records indicate the start and end offsets relative to $END$ of the confidence interval for each alt allele.
-For example, $CIEND=-5,5,.,.$ indicates a 5bp confidence interval in each direction around the end position for the first alt allele, and no $CIEND$ defined for the second alt allele.
+If present, the number of entries must be twice the number of alt alleles.
+$CIEND$ consists of successive pairs of records indicating the start and end offsets relative to $END$ of the confidence interval for each alt allele.
+For example, $CIEND=-5,5,.,.$ indicates a 5bp confidence interval in each direction around the end position for the first alt allele, and no $CIEND$ is defined for the second alt allele.
 
 \footnotesize
 \begin{verbatim}
@@ -643,7 +656,7 @@ However, the alternate allele assembly file may contain additional information a
 \end{verbatim}
 \normalsize
 
-If present, the number of entries must be four (4) the number of alt allele (Number=4A).
+If present, the number of entries must be four (4) times the number of alt alleles.
 $MEINFO$ consists of successive quadruplets of records for each alt allele.
 
 \footnotesize
@@ -652,7 +665,7 @@ $MEINFO$ consists of successive quadruplets of records for each alt allele.
 \end{verbatim}
 \normalsize
 
-If present, the number of entries must be four (4) the number of alt allele (Number=4A).
+If present, the number of entries must be four (4) times the number of alt alleles.
 $MEINFO$ consists of successive quadruplets of records for each alt allele.
 
 \footnotesize
@@ -663,12 +676,12 @@ $MEINFO$ consists of successive quadruplets of records for each alt allele.
 ##INFO=<ID=MATEID,Number=A,Type=String,Description="ID of mate breakends">
 ##INFO=<ID=PARID,Number=A,Type=String,Description="ID of partner breakend">
 ##INFO=<ID=EVENT,Number=A,Type=String,Description="ID of event associated to breakend">
-##INFO=<ID=CILEN,Number=.,Type=Integer,Description="Confidence interval around the inserted material between breakends">
+##INFO=<ID=CILEN,Number=.,Type=Integer,Description="Confidence interval for the SVLEN field">
 \end{verbatim}
 \normalsize
 
-If present, the number of entries must be twice the number of alt allele (Number=2A).
-$CIEND$ consists of successive pairs of records indicate the lower and upper bounds of the $SVLEN$ confidence interval.
+If present, the number of entries must be twice the number of alt alleles.
+$CILEN$ consists of successive pairs of records indicating the lower and upper bounds of the $SVLEN$ confidence interval.
 
 \footnotesize
 \begin{verbatim}
@@ -680,8 +693,8 @@ $CIEND$ consists of successive pairs of records indicate the lower and upper bou
 \end{verbatim}
 \normalsize
 
-If present, the number of entries must be twice the number of alt allele (Number=2A).
-$CICN$ consists of successive pairs of records indicate the lower and upper copy number bounds.
+If present, the number of entries must be twice the number of alt alleles.
+$CICN$ consists of successive pairs of records indicating the lower and upper copy number bounds.
 
 \footnotesize
 \begin{verbatim}
@@ -689,8 +702,8 @@ $CICN$ consists of successive pairs of records indicate the lower and upper copy
 \end{verbatim}
 \normalsize
 
-If present, the number of entries must be twice the number of alt allele (Number=2A).
-$CICNADJ$ consists of successive pairs of records indicate the lower and upper copy number bounds.
+If present, the number of entries must be twice the number of alt alleles.
+$CICNADJ$ consists of successive pairs of records indicating the lower and upper copy number bounds.
 
 \section{FORMAT keys used for structural variants}
 \label{sv-format-keys}
