CSI allows metadata pseudo-bins (at a calculated bin number)
Mention that CSI has metadata pseudo-bins with the same contents as BAI,
and generalise their bin number calculation from BAI's 37450.

Also clarify CSI "depth", which is more max_level than number-of-levels.

--- a/CSIv1.tex
+++ b/CSIv1.tex
@@ -36,6 +36,14 @@
 \end{tabular}}
 \end{table}
 
+\noindent
+The following functions generalise those given in the SAM specification for a BAI-style binning scheme.
+Note that in CSI \textit{depth} refers to the scheme's maximal depth, i.e., the level number of the scheme's smallest bins, and the single-bin level spanning the entire coordinate range is level 0.
+Hence the BAI-style binning scheme, with six levels in total, is represented by $\mbox{\sf min\_shift} = 14, \mbox{\sf depth} = 5$.
+
+CSI index files may contain metadata pseudo-bins for each reference sequence, with the same contents as BAI pseudo-bins.
+In CSI, the pseudo-bins have bin number $\mbox{\sf bin\_limit}(\mbox{\sf min\_shift}, \mbox{\sf depth}) + 1$.
+
 {\footnotesize
 \begin{verbatim}
 /* calculate bin given an alignment covering [beg,end) (zero-based, half-close-half-open) */
@@ -46,6 +54,7 @@ int reg2bin(int64_t beg, int64_t end, int min_shift, int depth)
         if (beg>>s == end>>s) return t + (beg>>s);
     return 0;
 }
+
 /* calculate the list of bins that may overlap with region [beg,end) (zero-based) */
 int reg2bins(int64_t beg, int64_t end, int min_shift, int depth, int *bins)
 {
@@ -55,6 +64,12 @@ int reg2bins(int64_t beg, int64_t end, int min_shift, int depth, int *bins)
         for (i = b; i <= e; ++i) bins[n++] = i;
     }
     return n;
+}
+
+/* calculate maximum bin number -- valid bin numbers range within [0,bin_limit) */
+int bin_limit(int min_shift, int depth)
+{
+    return ((1 << (depth+1)*3) - 1) / 7;
 }
 \end{verbatim}
 }
