missing INFO values: reword sentence

--- a/VCFv4.4.tex
+++ b/VCFv4.4.tex
@@ -336,6 +336,7 @@ Fixed fields are:
   INFO keys must match the regular expression \texttt{\^{}([A-Za-z\_][0-9A-Za-z\_.]*|1000G)\$}, please note that ``1000G'' is allowed as a special legacy value.
   Duplicate keys are not allowed.
   Arbitrary keys are permitted, although those listed in Table~\ref{table:reserved-info} and described below are reserved (albeit optional).
+  If no keys are present, the missing value must be specified.
 
   The exact format of each INFO key should be specified in the meta-information (as described above).
   Example for an INFO field: DP=154;MQ=52;H2.
